--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Welcome! Please remember to look over our guidelines.'' first issue'
-        pr-message: 'Welcome! Please remember to look over our guidelines.'' first pr'
+        issue-message: 'Welcome! Please remember to look over our guidelines.''
+        pr-message: 'Welcome! Please remember to look over our guidelines.''
